styles/appStyle.css
*{
	outline:none;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	font-family:Helvetica, Sans-Serif;

	/* Prevent user selection */
	-webkit-tap-highlight-color: transparent !important;
	-webkit-tap-highlight-color:rgba(0,0,0,0) !important;
}
html,
body{
	font-family:Helvetica, Sans-Serif;
	font-weight:100;
	color:#5f5f5f;
    margin:0px;
	height:100%;
	overflow-x:hidden;
}
html:not([buildfire='enabled']),
html:not([buildfire='enabled']) body){
	overflow:hidden;
}
::-webkit-scrollbar{
    display:none;
}
img,
iframe, 
object{
	max-width:100%;
	vertical-align:top;
}
iframe{
	border:none;
	outline:none;
	width:100%;
}
ul,
ol{
	padding:0;
	margin:0;
}
ul li,
ol li{
	list-style:none;
}
textarea{
	overflow:auto;
}
.holder{
	padding:15px;
}
.padded{
	padding:15px;
}
.holder .btn.dropdown-toggle{
	width:100%;
}

/* Plugin Nav */
#pluginNav{
    height:auto !important;
	background:#09a3ee;
	padding:14px 10px;
	border-bottom:none;
	margin-bottom:0;
}
#pluginNav a.back-btn-icon,
#pluginNav a.menu-btn-icon{
	position:absolute;
	top:17px;
	left:10px;
	font-size:15px;
	color:#fff;
	font-weight:600;
	text-decoration:none;
	cursor:default;
}
#pluginNav a.menu-btn-icon{
	left:auto;
	right:10px;
	font-size:21px;
	top:14px;
}
#pluginNav h4,
#pluginNav h5{
	text-align:center;
	color:#fff;
	margin:0 auto;
	max-width:65%;
	font-size:16px;
	line-height:18px;
	position:relative;
	top:4px;
	font-weight:100;
}
/* Target Webkit browsers for alignment */
@media screen and (-webkit-min-device-pixel-ratio:0) {
	#pluginNav h4,
	#pluginNav h5{
		top:3px;
	}
}
#pluginNav #pluginTitle{
	padding:15px;
	margin:-15px auto;
}
#pluginNav #btnBack{
	padding:17px;
	margin:-17px;
}

/* Menu Toggle */
#menuToggle{
	border-radius:5px 0 0 5px;
	font-size:21px;
	padding:8px 10px 4px;
	position:fixed;
	top:6px;
	right:0;
	z-index:9999999;
	background:#fff;
	cursor:pointer;
}
#menuToggle span.icon{
	font-size:21px;
}
#menuToggle .notification-circle{
	position:absolute;
	top:8px;
	left:-12px;
	width:22px;
	height:22px;
	text-align:center;
	border-radius:100%;
}
#menuToggle .notification-circle span{
	font-size:10px;
	position:relative;
	top:-2px;
	text-align:center;
}

/* Menu */
#menu{
	position:relative;
}
nav.menu{
	position:fixed;
	right:0;
	top:0;
	width:100%;
	height:100%;
	z-index:99999999;
	background:#fff;
	opacity:0.95;
	overflow-x:hidden;
	overflow-y:auto;
	-webkit-overflow-scrolling:touch;
	transition:all 0.35s ease;
	-webkit-transform:translateX(100%);
	transform:translateX(100%);
}
nav.menu.active{
	-webkit-transform:translateX(0%);
	transform:translateX(0%);
}
nav.menu a{
	display:block;
	width:100%;
	padding:10px 12px;
	text-decoration:none;
	position:relative;
}
nav.menu a.username{
	padding-top:15px;
	padding-bottom:14px;
	padding-right:37px;
}
nav.menu span.menu-close{
	position:absolute;
	top:19px;
	right:12px;
	font-size:13px;
	font-weight:600;
	cursor:pointer;
	z-index:99;
}
nav.menu #sideMenuCloseButton{
    padding:15px;
    margin:-15px;
}
nav.menu a.divider{
	padding-top:6px;
	padding-bottom:6px;
	border-top:none !important;
	background:#efefef;
}
nav.menu a .media{
	display:inline-block;
	width:22px;
	height:22px;
	line-height:22px;
	margin-right:12px;
	text-align:center;
}
nav.menu a .media img{
	vertical-align:middle;
	max-width:22px;
	max-height:22px;
	height:auto;
	width:auto;
	border-radius:2px;
}
nav.menu a .media .main-icon{
	vertical-align:middle;
	font-size:16px;
}
nav.menu a p{
	margin:3px 0 0;
	max-width:100%;
	font-size:13px;
	line-height:18px;
}
nav.menu a.notifications p{
	padding-right:45px;
}
nav.menu a.notifications .notification-circle{
	position:absolute;
	top:13px;
	right:12px;
	height:20px;
	padding:0 7px;
	border-radius:10px;
}
nav.menu a.notifications .notification-circle span{
	color:#fff !important;
	font-size:11px;
	position:relative;
	top:-1px;
}

/* Slider */
.plugin-slider,
.plugin-slide,
.contact-maps{
	max-height:380px;
	background:#eef0f0;
	background:#32373a;
}
.contact-maps{
	background:#32373a;
}
.plugin-slide.show-map{
	height:320px;
}
.plugin-slide img,
.contact-maps img{
	max-height:380px;
	width:auto !important;
	margin:0 auto;
}
.no-background .plugin-slide{
	background:none;
}


/* Bottom */
.holder.has-bottom{
	padding-bottom:38px !important;
}
.holder.has-bottom.has-bottom-viewing{
	padding-bottom:65px !important;
}
.holder .bottom.fixed-bottom{
	position:fixed;
	bottom:0;
	left:0;
	width:100%;
	background:#fff;
	z-index:11;
}
.holder .bottom div{
	padding:0;
}
.holder .bottom .padded{
	padding:15px;
}
.holder .bottom div a{
	display:inline-block;
	width:100%;
	height:100%;
	padding:8px;
	text-decoration:none;
}
.places-plugin .bottom.fixed-bottom .col-xs-4 + .col-xs-4{
	border-left:1px solid rgba(20, 20, 20, 0.25);
}
.places-plugin .bottom.fixed-bottom .col-xs-4.active{
	background:rgba(0,0,0,0.15);
}
.holder .bottom > .hidden-content{
	background:#fff;
}
.holder .places-plugin .bottom{
	bottom:-270px;
}
.holder .places-plugin .bottom.active{
	bottom:0;
}
.holder .bottom .hidden-content .tabs .tab a,
.notification-plugin .tabs .tab a{
	display:block;
	padding-top:10px;
	color:#5f5f5f;
}
.holder .bottom .hidden-content .tabs .tab + .tab,
.notification-plugin .tabs .tab + .tab{
	border-left:1px solid #e5e5e5;
}
.holder .bottom .hidden-content .tabs .tab.active a,
.notification-plugin .tabs .tab.active a{
	color:#09a3ee;
}
.holder .bottom .hidden-content .tabs .tab.active:after,
.notification-plugin .tabs .tab.active:after{
	content:'';
	display:block;
	width:100%;
	height:2px;
	background:#09a3ee;
	position:absolute;
	bottom:-1px;
	left:0;
}
.holder .bottom .hidden-content .tab-content .tab{
	display:none;
	height:229px;
	overflow:auto;
}
.notification-plugin .tabs .tab a{
	padding:10px 8px 8px;
	display:block;
}
.notification-plugin .tab-content .tab{
	display:none;
}
.holder .bottom .hidden-content .tab-content .tab.active,
.notification-plugin .tab-content .tab.active{
	display:block;
}
/* ... */

